--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ style.css
     h1 {
        margin-bottom: 15px;
     text-align: center;
-    color: black;
+    color: #ff4532;
     font-size: 50px;
     }
 
@@ -59,7 +59,7 @@ style.css
         text-align: center;
         font-size: 125%;
         font-weight: bold;
-        background-color: red;
+        background-color: #FF0000;
 
     }
 
@@ -76,6 +76,22 @@ style.css
         background-color: rgb(223, 212, 121);
 
     }
+
+    .content {
+        padding: 5px;
+        border: none;
+        background-color: gray;
+        font-family: Helvetica;
+        color: black;
+        margin: 3px ;
+        height: 150px;
+        overflow: auto;
+    }
+
+    .row {
+        width: 90%;
+    }
+
     /*desktop version*/
     @media (min-width: 992px) {
         .column-lg-4 {
@@ -104,24 +120,7 @@ style.css
     /*mobile version*/
     @media (max-width: 767px) {
         .colmn-sm-12 {
-            float: right;
+            float: left;
             width: 100%;
         }
     }
-
-    .content {
-        padding: 5px;
-        border: none;
-        background-color: gray;
-        font-family: Helvetica;
-        color: black;
-        margin: 3px ;
-        height: 150px;
-        overflow: auto;
-    }
-
-    .row {
-        width: 90%;
-    }
-
-    
